--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,32 @@
-/*Назначить значения при наведении, активности, нарисовать кнопки купить/в закладки, 
-оформить фильтры, нарисовать треугольники вверх и вниз, надпись new, 
-оформить переключатель страниц товаров,
-найти недостающий шрифт*/
+/*Назначить значения при наведении для блоков фильтра, стилизовать фильтр,
+нарисовать треугольники вверх и вниз, надпись new, стилизовать кнопки в галерее*/
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
 
 body {
   margin: 0;
   padding: 0;
   font-family: "Cuprum", Arial, sans-serif;
-  font-weight: 100;
+  font-weight: 400;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 a {
@@ -38,30 +57,64 @@ a {
   line-height: 18px;
 }
 
-.logo {
+.logo-main {
   display: inline-block;            /*ПОЗДНЕЕ УБРАТЬ*/
   width: 200px;
-  height: 22px;
   padding: 10px;
   background-color: #ee3643;
   box-shadow: 0px 4px 0 0 #b52933;
   text-align: center;
 }
 
+.logo:hover {
+  background-color: #ca2c37;
+}
+
+.logo:active {
+  background-color: #ba2732;
+}
+
 .header-top form {
   padding: 10px;
 }
 
-.header-top li {
+.header-top form:hover {
+  background-color: #212a3a;
+}
+
+.top-links {
   display: inline-block;            /*ПОЗДНЕЕ УБРАТЬ*/
   width: 150px;
-  height: 22px;
   padding: 10px;
   text-align: center;
 }
 
-.header-top li:last-child {
+.top-links:hover {
+  background-color: #212a3a;
+}
+
+.top-links:active {
+  background-color: #161d29;
+}
+
+.top-links:active a {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.checkout {
   background-color: #63a63e;
+}
+
+.checkout:hover {
+  background-color: #5fbb2d;
+}
+
+.checkout:active {
+  background-color: #518534;
+}
+
+.checkout:active a {
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .basket {
@@ -96,18 +149,34 @@ a {
   line-height: 21px;
 }
 
-.account ul li {
+.exit:hover {
+  color: #ee3643;
+}
+
+.registration a:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.account-items li {
   list-style-type: disc;
   color: #32425c;
 }
 
-.account ul li:first-child {
+.account-items li:first-child {
   list-style-type: none;
 }
 
-.account ul a {
+.account-items a {
   color: #32425c;
   text-decoration: underline;
+}
+
+.account-items a:hover {
+  color: #ee3643;
+}
+
+.account-items a:active {
+  color: rgba(50, 66, 92, 0.3);
 }
 
 .navigation {
@@ -116,11 +185,24 @@ a {
   line-height: 17px;
 }
 
-.navigation li {
+.nav-item {
   display: inline-block;            /*ПОЗДНЕЕ УБРАТЬ*/
   padding: 15px;
-  padding-right: 40px;
+  padding-right: 28px;
+  padding-left: 28px;
   text-align: center;
+}
+
+.nav-item:hover:not(.paged) {
+  background-color: #293449;
+}
+
+.nav-item:hover:not(.paged) {
+  background-color: #1d2739;
+}
+
+.nav-item a:active {
+  color: rgba(250, 250, 250, 0.5);
 }
 
 .head-name {
@@ -135,10 +217,10 @@ h1 {
 }
 
 .breadcrumbs {
-  font-family: "Pt sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 18px;
-  font-weight: 100;
+  font-weight: 400;
 }
 
 .breadcrumbs {
@@ -161,21 +243,28 @@ h1 {
   padding-left: 20px;
   font-size: 24px;
   line-height: 30px;
-  font-weight: 100;
+  font-weight: 400;
 }
 
 .menu-item a {
-  display: inline-block;            /*ПОЗДНЕЕ УБРАТЬ*/
+  display: inline-block;            
   padding: 10px;
   width: 115px;
-  height: 18px;
   color: #ffffff;
-  background-color: #293449;
+  background-color: rgba(0, 0, 0, 0.1);
   font-size: 14px;
   line-height: 18px;
   text-align: center;
   border-radius: 5px;
   text-transform: uppercase;
+}
+
+.menu-item a:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.menu-item a:active {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 /*Цветные блоки меню*/
@@ -186,14 +275,6 @@ h1 {
 
 .menu-left .menu-item:first-child {
   background-color: #ffbf47;
-}
-
-.menu-left .menu-item:first-child a {
-  background-color: #e5ac40;
-}
-
-.menu-left .menu-item:last-child a {
-  background-color: #35a9cc;
 }
 
 .menu-right .menu-item {
@@ -208,22 +289,10 @@ h1 {
   background-color: #ffc047;
 }
 
-.menu-right .menu-item a {
-  background-color: #80c180;
-}
-
-.menu-right .menu-item:first-child a {
-  background-color: #c682c2;
-}
-
-.menu-right .menu-item:last-child a {
-  background-color: #e5ac40;
-}
-
 .slider h3 {
   font-size: 36px;
   line-height: 36px;
-  font-weight: 100;
+  font-weight: 400;
   text-transform: uppercase;
 }
 
@@ -249,40 +318,43 @@ h1 {
   background-size: cover;
 }
 
-aside p {
-  font-family: "Pt sans", Arial, sans-serif;
+/*.btn-left {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background: red;
+  background: url("../img/icon-left.svg");
+  border: none;
+  background-position: 50%;
+} */
+
+.breadcrumbs a,
+.breadcrumbs-active {
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 18px;
-  font-weight: 100;
+  color: #000000;
+}
+
+.aside {
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 17px;
+  line-height: 30px;
+  font-weight: 400;
   text-transform: uppercase;
+}
+
+.aside p {
+  font-size: 13px;
+  line-height: 18px;
   background-color: #f7f3ec;
 }
 
-aside legend {
-  font-family: "Pt sans", Arial, sans-serif;
-  font-size: 17px;
-  line-height: 30px;
-  font-weight: bold;
-  text-transform: uppercase;
+.aside legend {
+  font-weight: 700;
 }
 
-.brands-range {
-  font-family: "Pt sans", Arial, sans-serif;
-  font-size: 17px;
-  line-height: 30px;
-  font-weight: 100;
-  text-transform: uppercase;
-}
-
-.supply {
-  font-family: "Pt sans", Arial, sans-serif;
-  font-size: 17px;
-  line-height: 30px;
-  font-weight: 100;
-  text-transform: uppercase;
-}
-
-aside button {
+.aside button {
   padding: 5px 20px;
   background-color: #ffffff;
   border: 1px solid #e5e5e5;
@@ -299,11 +371,26 @@ aside button {
 
 .sorting p, 
 .sorting a {
-  font-family: "Pt sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 18px;
-  font-weight: 100;
+  font-weight: 400;
   text-transform: uppercase;
+}
+
+.sorting a {
+  color: rgba(0, 0, 0, 0.3);
+  border-bottom: 1px dotted #ee3643;
+}
+
+.sorting a:hover {
+  color: rgba(0, 0, 0, 1);
+  border-bottom: 1px solid #ee3643;
+}
+
+.sorting a:active {
+  color: #ee3643;
+  border-bottom: none;
 }
 
 .sorting ul {
@@ -317,7 +404,7 @@ aside button {
 .popular h2 {
   font-size: 30px;
   line-height: 30px;
-  font-weight: 100;
+  font-weight: 400;
   text-transform: uppercase;
   color: #32425c;
 }
@@ -327,20 +414,26 @@ aside button {
   list-style: none;
   width: 218px;
   height: 316px;
-  font-family: "Pt sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
-  font-weight: bold;
+  font-weight: 700;
   text-align: center;
   border: 1px solid #eaeaea;
 }
 
 .card-item h4 {
+  margin: 0;
   font-size: 18px;
   line-height: 20px;
   font-weight: 800;
 }
 
 .card-item img {
+  margin: 0;
+}
+
+.card-item p {
+  margin: 0;
 }
 
 .del {
@@ -360,6 +453,86 @@ aside button {
   display: none;
 }
 
+.buy a {
+  display: inline-block;
+  padding: 10px;
+  width: 135px;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.buy-btn {
+  color: #ffffff;
+  background-color: #63a63e;
+  border-radius: 3px;
+  box-shadow: 0 -3px 0 0 #367315 inset; 
+}
+
+.buy-btn:hover {
+  background-color: #5fbb2d;
+}
+
+.buy-btn:active {
+  background-color: #518534;
+  box-shadow: none;
+}
+
+.bookmark-btn {
+  color: #32425c;
+  border: 3px solid #63a63e;
+  border-radius: 3px;
+}
+
+.bookmark-btn:hover {
+  border-color: #32425c;
+}
+
+.bookmark-btn:active {
+  opacity: 0.3;
+}
+
+.pagination {
+  list-style: none;
+}
+
+.pagination a, 
+.pagination-active {
+  display: inline-block;
+  padding: 10px;
+  width: 38px;
+  height: 38px;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  border: 1px solid #e5e5e5;
+  border-radius: 2px;
+  color: #000000;
+}
+
+.next a {
+  width: 140px;
+}
+
+.pagination a:hover {
+  border-color: #bdc6ca;
+  color: #000000;
+}
+
+.pagination a:active {
+  border-color: #ee3643;
+  color: #000000;
+}
+
+.pagination-active {
+  border-color: #ee3643;
+  background-color: #ee3643;
+  color: #ffffff;
+}
+
 .brand-item {
   display: inline-block;            /*ПОЗДНЕЕ УБРАТЬ*/
   list-style: none;
@@ -370,31 +543,51 @@ aside button {
   border: 1px solid #eaeaea;
 }
 
+.brand-item:hover {
+  width: 220px;
+  height: 145px;
+  border: none;
+  box-shadow: 0 10px 25px 0 rgba(47, 42, 43, 0.5);
+}
+
+.brand-item:active {
+  width: 220px;
+  height: 145px;
+  border: none;
+  box-shadow: 0 4px 10px 0 rgba(47, 42, 43, 0.5);
+}
+
+
 .services {
   background-color: #f4f8fa;
 }
 
-.services-description h2 {
-  /*НЕТ ДАННЫХ ШРИФТА*/
+.services-description h2,
+.info h2,
+.contacts h2,
+.items-info h2 {
+  font-size: 30px;
+  line-height: 30px;
+  font-weight: 400;
+  text-transform: uppercase;
 }
 
-.services-description p {
-  /*НЕТ ДАННЫХ ШРИФТА*/
+.text-info {
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 24px;
 }
 
 .services-info ul {
   list-style: none;
 }
 
-.services-btn {
-}
-
 .services-btn a {
   display: inline-block;
   padding-top: 15px;
   padding-left: 20px;
-  width: 220px;
-  height: 47px;
+  width: 240px;
+  height: 62px;
   font-size: 21px;
   line-height: 30px;
   background-color: #32425c;
@@ -403,55 +596,41 @@ aside button {
               0 -1px 0 0 #293449 inset; 
 }
 
+.services-btn a:hover {
+  color: #ffffff;
+  background-color: #293449;
+  box-shadow: none;
+  box-shadow: 0 1px 0 0 #405069 inset;
+
+}
+
 .services-btn a:active {
   color: #32425c;
   background-color: #ffffff;
   box-shadow: none;
 }
 
-.services-info h2 {
-  /*НЕТ ДАННЫХ ШРИФТА*/
-}
-
-.services-info p {
-  /*НЕТ ДАННЫХ ШРИФТА*/
-}
-
-.info h3 {
-  /*НЕТ ДАННЫХ ШРИФТА*/
-}
-
-.info p {
-  /*НЕТ ДАННЫХ ШРИФТА*/
+.services-info h3 {
+  font-size: 36px;
+  line-height: 36px;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #32425c;
 }
 
 .info ul {
   list-style: none;
 }
 
-.contacts h3 {
-  /*НЕТ ДАННЫХ ШРИФТА*/
-}
-
-.contacts p {
-  /*НЕТ ДАННЫХ ШРИФТА*/
-}
-
 .items-info {
   background-color: #f2f6f8;
 }
 
-.items-info h2 {
-  font-size: 30px;
-  line-height: 30px;
-  text-transform: uppercase;
-}
-
 .items-info p {
-  font-family: "Pt sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
   line-height: 24px;
-  font-weight: 100;
+  font-weight: 400;
 }
 
 .btn-red {
@@ -467,6 +646,27 @@ aside button {
   border-radius: 5px;
 }
 
+.btn-red:hover {
+  background-color: #ca2c37;
+}
+
+.btn-red:active {
+  background-color: #ba2732;
+}
+
+.btn-continue {
+  display: inline-block;
+  padding: 12px 0;
+  width: 195px;
+  background-color: #ffffff;
+  font-size: 14px;
+  text-transform: uppercase;
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+}
+
+
 .footer {
   background-color: #32425c;
 }
@@ -480,7 +680,15 @@ aside button {
   color: #ffffff;
 }
 
-.footer-top .logo {
+.footer a:hover {
+  text-decoration: underline;
+}
+
+.footer a:active {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.footer-top .logo-main {
   padding: 15px 10px;
 }
 
@@ -507,8 +715,12 @@ aside button {
   text-align: center;
 }
 
-.footer-center-nav li>a {
+.footer-center-nav a {
   color: #ffd180;
+}
+
+.footer-center-nav a:active {
+  color: rgba(255, 209, 128, 0.5);
 }
 
 .footer-bottom {
@@ -519,8 +731,15 @@ aside button {
   text-align: center;
 }
 
-.footer-bottom p>a {
+.mailto a,
+.htmlacademy a {
   color: #ffd180;
+}
+
+.htmlacademy a:active,
+.mailto a:active {
+  color: #ee3643;
+  text-decoration: none;
 }
 
 .feedback {
@@ -537,19 +756,46 @@ aside button {
   line-height: 18px;
 }
 
-.feedback form input, 
-.feedback form textarea {
-  border: 2px solid #dee3e4;
+.feedback-form input, 
+.feedback-form textarea {
+  outline: none;
+  border: 2px solid #d7dcde;
   border-radius: 5px;
+}
+
+.feedback-form input:hover, 
+.feedback-form textarea:hover {
+  border: 2px solid #b5b5b5;
+}
+
+.feedback-form input:focus, 
+.feedback-form textarea:focus {
+  border: 2px solid #ee3643;
 }
 
 .map {
   display: inline-block;
   width: 940px;
-  height: 447px;
-  box-shadow: 0px 0px 14.72px 1.28px rgba(47, 42, 43, 0.5);
+  height: 446px;
+  box-shadow: 0 0 15px 1px rgba(47, 42, 43, 0.5);
 }
 
-.visually-hidden {
-  display: none;
+.map img {
+  display: block;
 }
+
+.popup-buy {
+  margin:20px;
+  display: inline-block;
+  width: 620px;
+  height: 282px;
+  box-shadow: 0 7px 0 0 #ff5257 inset,
+              0 -112px 0 0 #f4f4f4 inset,
+              0 20px 40px 0 rgba(0, 0, 0, 0.75);
+}
+
+.popup-buy p {
+  font-size: 30px;
+  line-height: 30px;
+}
+
