--- a/css/style.css
+++ b/css/style.css
@@ -646,13 +646,20 @@ h1 {
 
 .breadcrumbs a::after {
   position: absolute;
-  top: 2px;
+  top: 3px;
   right: 13px;
   content: "";
-  width: 7px;
+  width: 9px;
+  height: 9px;
+  background: transparent;
+  border-top: 2px solid #c5c9d1;
+  border-right: 2px solid #c5c9d1;
+  transform: rotate(45deg);
+  border-radius: 1px;  
+  /* width: 7px;
   height: 12px;
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='12' viewBox='0 0 8 12'%3E%3Cpath fill='%23C1C6CE' d='M7.237 5.642L1.729.133a.506.506 0 1 0-.716.716L6.163 6l-5.151 5.15a.507.507 0 0 0 .716.717l5.509-5.509a.504.504 0 0 0 0-.716z'/%3E%3C/svg%3E") no-repeat 50%;
-  background-size: 7px 12px;
+  background-size: 7px 12px; */
 }
 
 .breadcrumbs a,
