--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ a {
 
 .logo-main {
   display: flex;
+  flex-shrink: 0;
   justify-content: center;
   align-items: center;
   width: 220px;
@@ -146,6 +147,7 @@ a {
 
 .top-links {
   display: flex;
+  padding: 0;
 }
 
 .top-link {
@@ -219,9 +221,9 @@ a {
   color: rgba(255, 255, 255, 0.6);
 }
 
-/*.basket a {
+.basket-active a {
   background-color: #ee3643;
-}*/
+}
 
 .header-middle {
   display: flex;
@@ -251,14 +253,14 @@ a {
 
 .header-address a {
   position: relative;
-  border: 3px solid white;
+  width: 270px;
   margin: 0;
   padding: 9px;
   padding-left: 71px;
-  padding-right: 50px;
   color: #ee3643;
   font-size: 21px;
   line-height: 21px;
+  border: 3px solid white;
 }
 
 .header-address a::before {
@@ -467,11 +469,14 @@ a {
 .menu-left {
   display: flex;
   flex-direction: column;
+  width: 620px;
   margin: 0;
+  margin-right: 20px;
 }
 
 .menu-left-items {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   margin: 0;
   padding-left: 0;
@@ -481,6 +486,7 @@ a {
   display: flex;
   flex-direction: column;
   position: relative;
+  flex-shrink: 0;
   padding: 21px 23px;
   width: 300px;
   height: 123px;
@@ -549,6 +555,10 @@ a {
   background-repeat: no-repeat;
 }
 
+.menu-left .menu-item:nth-child(2) {
+  margin-right: 0;
+}
+
 .menu-right .menu-item {
   background-color: #8ed78f;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='59' height='72' viewBox='0 0 59 72'%3E%3Cg fill='%23FFF'%3E%3Cpath d='M58.34 20.545a2.997 2.997 0 0 0-2.396-1.195h-38.67l-2.475-7.385H3.058a3 3 0 1 0 0 6h7.424l13.5 40.285h25.159a3 3 0 1 0 0-6H28.299l-1.726-5.149h23.12a3.001 3.001 0 0 0 2.884-2.172l6.25-21.75a3.005 3.005 0 0 0-.487-2.634zm-7.781 9.681h-4.81V25.35h6.211l-1.401 4.876zm-17.617 0V25.35h6.807v4.875h-6.807zm6.807 6v4.875h-6.807v-4.875h6.807zM26.942 25.35v4.875h-6.023l-1.634-4.875h7.657zm-4.013 10.876h4.013v4.875h-2.379l-1.634-4.875zm22.82 4.875v-4.875h3.086l-1.401 4.875h-1.685z'/%3E%3Ccircle cx='27.406' cy='66.094' r='5.781'/%3E%3Ccircle cx='44.844' cy='66.094' r='5.781'/%3E%3Cpath d='M29.335 9.699l7.547 5.492a1.986 1.986 0 0 0 2.818-.494c.646-.936.43-2.232-.48-2.895l-2.373-1.726 9.436-5.09L50.911 17h4.347L49.214 1.309A2.051 2.051 0 0 0 48.037.126a1.97 1.97 0 0 0-1.643.109L33.146 7.382l-3.022-2.199a1.986 1.986 0 0 0-2.742.39l-8.481 10.798a2.176 2.176 0 0 0-.405.628h5.106l5.733-7.3z'/%3E%3C/g%3E%3C/svg%3E");
@@ -580,7 +590,7 @@ a {
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
-  letter-spacing: 0.85px;
+  letter-spacing: 0.7px;
   text-transform: uppercase;
 }
 
@@ -633,6 +643,32 @@ a {
   right: 31px;
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='22' height='40' viewBox='0 0 22 40'%3E%3Cpath fill='%23FFF' d='M2.098-.035L.009 2.064l17.789 17.883L-.048 37.886l2.089 2.099 19.935-20.038z'/%3E%3C/svg%3E") no-repeat 50%;
 }
+
+.indicator-slider {
+  position: absolute;
+  padding: 3px;
+  /* width: 10px;
+  height: 10px; */
+  background: #ffffff;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.indicator-slider.indicator-active {
+  background: #ee3643;
+}
+
+.indicator-left {
+  bottom: 36px;
+  left: 295px;
+}
+
+.indicator-right {
+  bottom: 36px;
+  right: 315px;
+}
+
 
 .slide .btn-red {
   padding-left: 5px;
@@ -1076,12 +1112,13 @@ h1 {
 
 .popular-items {
   padding-top: 33px;
+  margin-bottom: 1px;
 }
 
 .popular {
   display: flex;
   align-items: center;
-  padding: 25px 24px;
+  padding: 25px 20px;
   padding-bottom: 26px;
   background-color: #f9f5f0;
 }
@@ -1089,7 +1126,7 @@ h1 {
 .popular h2 {
   margin: 0;
   padding-top: 2px;
-  padding-left: 4px;
+  padding-left: 8px;
   font-size: 30px;
   line-height: 30px;
   font-weight: 400;
@@ -1099,6 +1136,7 @@ h1 {
 
 .popular .btn-red {
   margin-left: auto;
+  margin-right: 4px;
   width: 253px;
 }
 
@@ -1118,7 +1156,7 @@ h1 {
   position: relative;
   padding-bottom: 20px;
   width: 220px;
-  height: 318px;
+  /* height: 318px; */
   margin-bottom: 20px;
   margin-right: 20px;
   text-align: center;
@@ -1132,8 +1170,8 @@ h1 {
   /* content: "new"; */
   top: 5px;
   padding-top: 3px;
-  padding-bottom: 6px;
-  right: -30px;
+  padding-bottom: 7px;
+  right: -29px;
   width: 100px;
   font-family: "PT Sans Narrow", Arial, sans-serif;
   font-size: 16px;
@@ -1189,6 +1227,7 @@ h1 {
 .del {
   min-height: 38px;
   padding: 11px;
+  padding-bottom: 10px;
   padding-left: 15px;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 17px;
@@ -1543,12 +1582,19 @@ a.pagination-active {
   width: 280px;
 }
 
+/* .guaranty h3 {
+  font-style: italic;
+  letter-spacing: 4px;
+} */
+
 .guaranty p {
   width: 380px;
+  letter-spacing: 0.12px;
 }
 
 .credit p {
   width: 300px;
+  margin-bottom: 25px;
 }
 
 .delivery {
@@ -1557,17 +1603,17 @@ a.pagination-active {
 }
 
 .guaranty {
-  background: url("../img/guarantee.png") no-repeat 100% 30px;
+  background: url("../img/guarantee.png") no-repeat 103% 4px;
   background-size: 389px 283px;
 }
 
 .credit {
-  background: url("../img/credit.png") no-repeat 100% 10px;
+  background: url("../img/credit.png") no-repeat 106% 0;
   background-size: 465px 285px;
 }
 
 .delivery,
-.guaranty {
+.credit {
   display: none;        /*ВРЕМЕННО*/
 }
 
@@ -1597,6 +1643,10 @@ a.pagination-active {
 
 .info .text-info:last-of-type {
   margin-bottom: 11px;
+}
+
+.transport-company {
+  display: block;
 }
 
 .text-logo {
@@ -1639,6 +1689,7 @@ a.pagination-active {
 }
 
 .contacts .text-info {
+  width: 200px;
   margin-bottom: 31px;
 }
 
@@ -1884,10 +1935,11 @@ a.pagination-active {
 
 .feedback {
   position: fixed;
+  z-index: 50;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding-top: 40px;
+  padding-top: 47px;
   padding-right: 80px;
   padding-bottom: 37px;
   padding-left: 80px;
@@ -1909,6 +1961,13 @@ a.pagination-active {
   flex-direction: column;
 }
 
+.feedback-form input,
+.feedback-form textarea {
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+}
+
 .feedback-login {
   display: flex;
 }
@@ -1916,22 +1975,24 @@ a.pagination-active {
 .feedback-login input {
   width: 220px;
   height: 38px;
-  padding: 10px;
+  padding-left: 14px;
+  padding-bottom: 3px;
 }
 
-.feedback-login div:first-child {
+.feedback-login .feedback-name {
   margin-right: 20px;
 }
 
 .textarea {
-  padding-top: 20px;
+  padding-top: 21px;
   margin-bottom: 70px;
 }
 
 .textarea textarea {
   width: 460px;
   height: 114px;
-  padding: 10px;
+  padding-top: 8px;
+  padding-left: 14px;
   resize: none;
 }
 
@@ -1946,9 +2007,10 @@ a.pagination-active {
 
 .feedback label {
   display: block;
+  margin-bottom: 9px;
+  padding-left: 1px;
   font-size: 18px;
   line-height: 18px;
-  margin-bottom: 10px;
 }
 
 .feedback-form input, 
@@ -1968,9 +2030,13 @@ a.pagination-active {
   border: 2px solid #ee3643;
 }
 
+.popup-map {
+  display: none;
+}
 
 .map {
   position: fixed;
+  z-index: 50;
   width: 940px;
   height: 446px;
   top: 50%;
@@ -1985,8 +2051,8 @@ a.pagination-active {
 
 .close {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 9px;
+  right: 9px;
   width: 21px;
   height: 21px;
   border: none;
@@ -1996,12 +2062,12 @@ a.pagination-active {
 
 .popup-buy {
   position: fixed;
-  z-index: 20;
+  z-index: 50;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   /* margin:20px;        ВРЕМЕННО */
-  padding-top: 50px;
+  padding-top: 35px;
   display: inline-block;
   width: 620px;
   height: 282px;
@@ -2013,36 +2079,45 @@ a.pagination-active {
 
 .popup-buy p {
   position: relative;
-  padding-left: 50px;
+  padding-left: 57px;
   text-align: center;
   font-size: 30px;
   line-height: 30px;
+  letter-spacing: 0.1px;
 }
 
 .popup-buy p::before {
   position: absolute;
   content: "";
-  left: 90px;
-  top: -20px;
+  left: 81px;
+  top: -17px;
   width: 66px;
   height: 66px;
   background: url("../img/basket-ok.png") no-repeat center;
 }
 
 .popup-buy-btn {
-  padding-top: 65px;
+  padding-top: 75px;
   text-align: center;
 }
 
+.popup-buy-btn .btn-red,
+.popup-buy-btn .btn-continue {
+  display: inline-block;
+  padding-top: 11px;
+  padding-bottom: 9px;
+  width: 220px;
+}
+
 .popup-buy-btn .btn-red {
-  margin-right: 20px;
+  margin-right: 16px;
 }
 
 .filter {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 15;
+  z-index: 40;
   width: 100%;
   height: 100%;
   background: #000000;
