--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,9 @@ a {
 }
 
 .container {
-  width: 940px;
+  width: 960px;
   margin: 0 auto;
+  padding: 0 10px;
 }
 
 .header {
@@ -57,10 +58,11 @@ a {
   line-height: 18px;
 }
 
-.header-top .container {
+.header-top-container {
   display: flex;
   align-items: center;
   height: 42px;
+  background-color: #293449;
 }
 
 .logo-main {
@@ -68,6 +70,7 @@ a {
   flex-shrink: 0;
   justify-content: center;
   align-items: center;
+  z-index: 1;
   width: 220px;
   height: 42px;
   background-color: #ee3643;
@@ -84,7 +87,9 @@ a {
 }
 
 .search {
+  position: relative;
   margin-right: auto;
+  flex-grow: 1;
 }
 
 .search-input {
@@ -104,11 +109,6 @@ a {
 .search-input::-webkit-search-cancel-button,
 .search-input::-webkit-search-results-button,
 .search-input::-webkit-search-results-decoration { display: none; }
-
-
-.search {
-  position: relative;
-}
 
 .search svg {
   position: absolute;
@@ -166,6 +166,7 @@ a {
 .bookmarks a,
 .basket a {
   padding-left: 30px;
+  background-color: #293449;
 }
 
 .bookmarks a::before,
@@ -223,6 +224,15 @@ a {
 
 .basket-active a {
   background-color: #ee3643;
+  padding-left: 36px;
+}
+
+.bookmarks-active a {
+  background-color: #ee3643;
+}
+
+.header-middle-container {
+  background-color: #f3f7f9;
 }
 
 .header-middle {
@@ -272,9 +282,10 @@ a {
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='19' height='19' viewBox='0 0 19 19'%3E%3Cpath fill='%23B7BFC8' d='M15.572 18.985h-.941c-4.129-.488-7.157-2.408-9.359-4.864C3.062 11.66 1.318 8.492.978 4.228V3.084c.078-.774.459-1.304.898-1.757C2.425.766 3.25.044 4.002.019c.554-.018 1.5.38 1.879.899.329.446.504 1.339.656 2.003.154.671.505 1.643.408 2.289-.148 1.007-1.487 1.434-1.879 2.166 1.307 3.135 3.443 5.439 6.293 7.031.715-.392 1.346-1.572 2.332-1.595.359-.009.818.178 1.184.286.402.121.75.275 1.104.408.596.224 1.648.521 2.004 1.021.365.513.57 1.356.49 1.879-.164 1.041-1.879 2.197-2.901 2.579z'/%3E%3C/svg%3E%0A") no-repeat;
 }
 
-.header-address adress {
+.header-address address {
   padding-top: 4px;
   color: #32425c;
+  font-style: normal;
 }
 
 .account {
@@ -434,6 +445,8 @@ a {
   margin: 0;
   padding-top: 20px;
   padding-bottom: 18px;
+  padding-left: 30px;
+  padding-right: 30px;
   background-color: #32425c;
   box-shadow: 0 5px 0 0 #293449;
   font-size: 17px;
@@ -441,14 +454,14 @@ a {
   text-align: center;
 }
 
-.nav-item:first-child a {
-  padding-left: 22px;
-  padding-right: 3px;
+.nav-item-first a {
+  padding-left: 52px;
+  padding-right: 33px;
 }
 
-.nav-item:last-child a {
-  padding-left: 4px;
-  padding-right: 24px;
+.nav-item-last a {
+  padding-left: 34px;
+  padding-right: 53px;
 }
 
 .nav-item:not(.paged) a:hover {
@@ -640,7 +653,7 @@ a {
 
 .btn-right {
   top: 114px;
-  right: 31px;
+  right: 11px;
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='22' height='40' viewBox='0 0 22 40'%3E%3Cpath fill='%23FFF' d='M2.098-.035L.009 2.064l17.789 17.883L-.048 37.886l2.089 2.099 19.935-20.038z'/%3E%3C/svg%3E") no-repeat 50%;
 }
 
@@ -666,7 +679,7 @@ a {
 
 .indicator-right {
   bottom: 36px;
-  right: 315px;
+  right: 295px;
 }
 
 
@@ -746,7 +759,7 @@ h1 {
   margin-top: 2px;
   margin-bottom: 3px;
   background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='15' height='12' viewBox='0 0 15 12'%3E%3Cg fill='%23C1C6CE'%3E%3Cpath d='M3 8v4h4V8h2v4h4V8L8 3.516z'/%3E%3Cpath d='M14.831 6.365L13 4.751V0h-2v2.987L8.332.635c-.02-.017-.043-.023-.064-.037a.465.465 0 0 0-.08-.047.551.551 0 0 0-.095-.024C8.062.521 8.032.515 8 .515c-.031 0-.061.006-.092.012a.46.46 0 0 0-.095.025c-.028.011-.053.029-.08.046-.021.014-.045.02-.064.037l-6.498 5.73a.501.501 0 0 0 .33.875.497.497 0 0 0 .331-.125L8 1.677l6.169 5.438a.501.501 0 0 0 .662-.75z'/%3E%3C/g%3E%3C/svg%3E") no-repeat left;
-  background-size: 14px 16px;
+  background-size: 14px 12px;
 }
 
       /*НАПОЛНЕНИЕ СТРАНИЦЫ КАТАЛОГА*/
@@ -798,7 +811,8 @@ h1 {
 
 .aside button {
   display: inline-block;
-  padding-top: 2px;
+  padding: 9px;
+  padding-top: 10px;
   width: 140px;
   height: 38px;
   font-family: "PT Sans", "Arial", sans-serif;
@@ -806,6 +820,7 @@ h1 {
   line-height: 18px;
   text-transform: uppercase;
   text-align: center;
+  vertical-align: middle;
   border: 1px solid #e5e5e5;
   border-radius: 2px;
   background-color: #ffffff;
@@ -1002,7 +1017,7 @@ h1 {
   margin: 0;
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 13px;
-  line-height: 18px;
+  line-height: 15px;
   font-weight: 400;
   text-transform: uppercase;
 }
@@ -1010,11 +1025,14 @@ h1 {
 .sorting p {
   padding: 10px;
   padding-left: 20px;
-  margin-right: auto;
+  padding-right: 20px;
+  margin-right: 120px;
+  line-height: 18px;
 }
 
 .sorting a {
   display: inline-block;
+  vertical-align: top;
   color: rgba(0, 0, 0, 0.3);
   border-bottom: 1px dotted #ee3643;
 }
@@ -1035,18 +1053,25 @@ h1 {
 
 .sorting-how {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   margin-right: 42px;
   padding-left: 0;
 }
 
 .sorting-how li {
-  margin-right: 67px;
+  margin-right: 34px;
+  margin-left: 33px;
 }
 
 .sorting-how li:last-child {
   margin-right: 0;
 }
+
+.sorting-how li:first-child {
+  margin-left: 0;
+}
+
 
 .sorting-up-down {
   display: flex;
@@ -1124,6 +1149,7 @@ h1 {
 }
 
 .popular h2 {
+  width: 550px;
   margin: 0;
   padding-top: 2px;
   padding-left: 8px;
@@ -1184,6 +1210,10 @@ h1 {
   z-index: 30;
 }
 
+.new-none {
+  display: none;
+}
+
 .popular-items .card-item:nth-child(4n) {
   margin-right: 0;
 }
@@ -1198,9 +1228,10 @@ h1 {
 }
 
 .card-item h4 {
+  width: 190px;
   margin: 0;
   margin-bottom: auto;
-  padding: 0px 20px;
+  /* padding: 0px 20px; */
   font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 20px;
@@ -1211,6 +1242,7 @@ h1 {
 .item-name:hover,
 .item-name:active {
   color: #000000;
+  text-align: center;
 }
 
 .card-item img {
@@ -1293,6 +1325,7 @@ h1 {
   line-height: 18px;
   text-transform: uppercase;
   font-weight: 400;
+  vertical-align: middle;
 }
 
 .buy-btn {
@@ -1368,6 +1401,7 @@ h1 {
   line-height: 18px;
   text-transform: uppercase;
   text-align: center;
+  vertical-align: middle;
   border: 1px solid #e5e5e5;
   border-radius: 2px;
   color: #000000;
@@ -1480,7 +1514,13 @@ a.pagination-active {
 }
 
 .services {
+  /* padding-top: 65px; */
+  background-color: #f4f8fa;
+}
+
+.services-container {
   padding-top: 65px;
+  padding-bottom: 20px;
   background-color: #f4f8fa;
 }
 
@@ -1518,7 +1558,7 @@ a.pagination-active {
   margin-left: 0;
   padding-left: 0;
   margin-top: 0;
-  margin-bottom: 96px;
+  margin-bottom: 76px;
 }
 
 .services-info ul::after {
@@ -1540,6 +1580,7 @@ a.pagination-active {
   font-size: 21px;
   line-height: 30px;
   letter-spacing: 0.5px;
+  vertical-align: middle;
   background-color: #32425c;
   color: #ffffff;
   box-shadow: 0 1px 0 0 #405069 inset,
@@ -1623,6 +1664,10 @@ a.pagination-active {
   margin-bottom: 86px;
 }
 
+.info {
+  width: 540px;
+}
+
 .text-h2,
 .text-info {
   margin: 0;
@@ -1684,8 +1729,7 @@ a.pagination-active {
 }
 
 .contacts {
-  width: 300px;
-  margin-left: 100px;      /*AUTO НЕ РАБОТАЕТ*/
+  margin-left: auto;      /*AUTO НЕ РАБОТАЕТ*/
 }
 
 .contacts .text-info {
@@ -1704,6 +1748,10 @@ a.pagination-active {
 }
 
 .items-info {
+  background-color: #f2f6f8;
+}
+
+.items-info-container {
   padding-top: 65px;
   padding-bottom: 68px;
   background-color: #f2f6f8;
@@ -1739,6 +1787,7 @@ a.pagination-active {
   line-height: 18px;
   text-transform: uppercase;
   text-align: center;
+  vertical-align: middle;
   border: none;
   border-radius: 5px;
 }
@@ -1760,6 +1809,7 @@ a.pagination-active {
   line-height: 18px;
   text-transform: uppercase;
   text-align: center;
+  vertical-align: middle;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -1773,6 +1823,11 @@ a.pagination-active {
 
 .footer {
   background-color: #32425c;
+}
+
+.footer-top-container {
+  background-color: #32425c;
+  padding-bottom: 49px;
 }
 
 .footer ul {
@@ -1819,17 +1874,26 @@ a.pagination-active {
   line-height: 24px;
 }
 
+.footer-top-nav a {
+  background-color: #32425c;
+}
+
 .footer-center {
   display: flex;
   padding-top: 33px;
   padding-left: 4px;
-  margin-bottom: 49px;
+  /* margin-bottom: 49px; */
 }
 
-.footer-center p {
+.footer-center .footer-address {
   width: 330px;
   font-size: 18px;
   line-height: 24px;
+  color: #ffffff;
+}
+
+.footer-address address {
+  font-style: normal;
 }
 
 .footer-center .footer-center-nav {
@@ -1848,6 +1912,7 @@ a.pagination-active {
 
 .footer-center-nav a {
   color: #ffd180;
+  background-color: #32425c;
 }
 
 .footer-center-nav a:active {
@@ -1863,6 +1928,7 @@ a.pagination-active {
   align-items: center;
   padding-top: 34px;
   padding-bottom: 31px;
+  background-color: #293449;
 }
 
 .copy {
@@ -1897,7 +1963,7 @@ a.pagination-active {
 
 .social .vkontakte {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='26' height='15' viewBox='0 0 26 15'%3E%3Cpath fill='%23FFF' d='M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z'/%3E%3C/svg%3E");
-  background-size: 26px 15px;
+  background-size: 26px 14px;
 }
 
 .social .facebook {
@@ -1907,7 +1973,7 @@ a.pagination-active {
 
 .social .instagram {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='21' height='21' viewBox='0 0 21 21'%3E%3Cpath fill='%23FFF' d='M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z'/%3E%3C/svg%3E");
-  background-size: 21px 21px;
+  background-size: 20px 20px;
 }
 
 .social a:hover,
@@ -1933,6 +1999,10 @@ a.pagination-active {
   text-decoration: none;
 }
 
+.popup-feedback {
+  display: none;
+}
+
 .feedback {
   position: fixed;
   z-index: 50;
@@ -1943,18 +2013,20 @@ a.pagination-active {
   padding-right: 80px;
   padding-bottom: 37px;
   padding-left: 80px;
-  /* margin: 50px 200px;            ВРЕМЕННО */
-  /* display: flex;
-  flex-direction: column; */
   width: 620px;
   height: 430px;
   background: #ffffff;
   border-top: 7px solid #ff5257;
   box-shadow: 0 -112px 0 0 #f4f4f4 inset,
               0 20px 40px 0 rgba(0, 0, 0, 0.75);
+  animation-name: bounce;
+  animation-duration: 0.6s;
 }
 
-/* 0 7px 0 0 #ff5257 inset, */
+.feedback-error {
+  animation-name: bounce;
+  animation-duration: 0.6s;
+}
 
 .feedback-form {
   display: flex;
@@ -2035,6 +2107,9 @@ a.pagination-active {
 }
 
 .map {
+  display: block;
+  width: 940px;
+  height: 446px;
   position: fixed;
   z-index: 50;
   width: 940px;
@@ -2042,11 +2117,10 @@ a.pagination-active {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
-.map img {
-  display: block;
   box-shadow: 0 0 15px 1px rgba(47, 42, 43, 0.5);
+  background: url("../img/map-full.jpg");
+  animation-name: bounce;
+  animation-duration: 0.6s;
 }
 
 .close {
@@ -2060,21 +2134,25 @@ a.pagination-active {
   cursor: pointer;
 }
 
+.popup-buy-container {
+  display: none;
+}
+
 .popup-buy {
   position: fixed;
   z-index: 50;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* margin:20px;        ВРЕМЕННО */
   padding-top: 35px;
-  display: inline-block;
   width: 620px;
   height: 282px;
   background: #ffffff;
   border-top: 7px solid #ff5257;
   box-shadow: 0 -112px 0 0 #f4f4f4 inset,
               0 20px 40px 0 rgba(0, 0, 0, 0.75);
+  animation-name: bounce;
+  animation-duration: 0.6s;
 }
 
 .popup-buy p {
@@ -2106,6 +2184,7 @@ a.pagination-active {
   display: inline-block;
   padding-top: 11px;
   padding-bottom: 9px;
+  vertical-align: middle;
   width: 220px;
 }
 
@@ -2123,3 +2202,17 @@ a.pagination-active {
   background: #000000;
   opacity: 0.5;
 }
+
+@keyframes bounce {
+  0%   { transform: translateX(-50%) translateY(-500%);}
+  70%  { transform: translateX(-50%) translateY(-58%);}
+  90%  { transform: translateX(-50%) translateY(-48%);}
+  100% { transform: translateX(-50%) translateY(-50%);}
+}
+ 
+@keyframes shake {
+  0%, 100%                { transform: translateX(-50%) translateY(-50%);}
+  10%, 30%, 50%, 70%, 90% { transform: translateX(-52%) translateY(-50%);}
+  20%, 40%, 60%, 80%      { transform: translateX(-48%) translateY(-50%);}
+} 
+  
