--- a/css/style.css
+++ b/css/style.css
@@ -460,6 +460,7 @@ a {
   padding: 0;
   margin-bottom: 65px;
   line-height: 17px;
+  box-shadow: 0 5px 0 0 #293449;
 }
 
 .nav-item {
@@ -472,7 +473,7 @@ a {
   margin: 0;
   padding-top: 20px;
   padding-bottom: 18px;
-  padding-left: 30px;
+  padding-left: 29px;
   padding-right: 30px;
   background-color: #32425c;
   box-shadow: 0 5px 0 0 #293449;
@@ -487,7 +488,7 @@ a {
 }
 
 .nav-item-last a {
-  padding-left: 34px;
+  padding-left: 33px;
   padding-right: 53px;
 }
 
@@ -1084,7 +1085,7 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  margin-right: 42px;
+  margin-right: auto;
   padding-left: 0;
 }
 
