--- a/css/style.css
+++ b/css/style.css
@@ -1893,7 +1893,8 @@ a.pagination-active {
   padding: 10px;
   padding-bottom: 16px;
   width: 220px;
-  height: 68px;}
+  height: 68px;
+}
 
 .footer-top .footer-top-nav {
   display: flex;
